<?xml version="1.0" encoding="utf-8"?>

<resources>

    <string name="action_insert_dummy_data">Insert Dummy Data</string>
    <string name="action_delete_all_entries">Delete All Plants</string>
    <string name="empty_view_title_text">It\'s a bit lonely here...</string>
    <string name="empty_view_subtitle_text">Get started by adding a plant</string>
    <string name="editor_activity_title_new_plant">Add a Plant</string>
    <string name="editor_activity_title_edit_plant">Edit Plant</string>
    <string name="unsaved_changes_dialog_msg">Discard your changes and quit editing?</string>
    <string name="discard">Discard</string>
    <string name="keep_editing">Keep Editing</string>
    <string name="hint_plant_price">Price (£)</string>
    <string name="app_name">Plant Inventory</string>
    <string name="add_plant">Add New Plant</string>
    <string name="plant_name">Plant Name</string>
    <string name="plant_name_edit">e.g Suri</string>
    <string name="plant_price">Price\u00A0</string>
    <string name="plant_quantity">Quantity\u00A0</string>
    <string name="plant_supplier_name">Supplier Name</string>
    <string name="plant_supplier_contact">Supplier Contact</string>
    <string name="plant_supplier_unknown">Unknown</string>
    <string name="plant_supplier_patch">Patch</string>
    <string name="plant_supplier_the_jungle">The Jungle</string>
    <string name="plant_supplier_crocus">Crocus</string>
    <string name="action_save">Save</string>
    <string name="confirm_deletion">Delete all entries?</string>
    <string name="deleteEntry">Delete this entry?</string>
    <string name="delete">Delete</string>
    <string name="deleted">plants deleted from inventory</string>
    <string name="cancel">cancel</string>
    <string name="quantity_changed_toast">quantity updated</string>
    <string name="quantity_completed_toast">quantity completed</string>
    <string name="successful">Plant saved</string>
    <string name="error">Error</string>
    <string name="please_add_plant_name">Please add a plant name!</string>
    <string name="please_add_a_quantity">Please add a quantity!</string>
    <string name="please_add_a_price">Please add a price!</string>
    <string name="please_add_the_supplier_name">Please add the supplier\'s name!</string>
    <string name="please_add_supplier_contact">Please add the supplier\'s contact number!</string>
    <string name="supplierContact">supplier contact</string>
    <string name="quantity_cannot_be_zero">Quantity cannot be zero</string>

</resources>