<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:orientation="vertical"
    android:padding="35dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="20dp"
        android:text="@string/add_plant"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="18sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:background="@drawable/background"
        android:orientation="horizontal">

        <TextView
            style="@style/CategoryStyle"
            android:layout_width="26dp"
            android:layout_height="wrap_content"
            android:text="@string/plant_name"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="14sp" />

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2">

            <EditText
                android:id="@+id/plant_name_edit_text"
                style="@style/EditorFieldStyle"
                android:layout_width="match_parent"
                android:layout_height="39dp"
                android:hint="@string/plant_name_edit"
                android:inputType="textCapWords"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="12sp" />
        </RelativeLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            style="@style/CategoryStyle"
            android:layout_width="28dp"
            android:layout_height="wrap_content"
            android:text="@string/hint_plant_price"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="14sp" />

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2">

            <EditText
                android:id="@+id/plant_price_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/plant_price"
                android:inputType="number"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="12sp" />

        </RelativeLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            style="@style/CategoryStyle"
            android:layout_height="wrap_content"
            android:text="@string/plant_quantity" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingTop="10dp">

            <Button
                android:id="@+id/increase_button"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                android:layout_marginStart="72dp"
                android:background="@null"
                android:drawableLeft="@drawable/ic_add_circle_purple_24dp" />

            <EditText
                android:id="@+id/plant_quantity_edit_text"
                android:layout_width="60dp"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_toEndOf="@+id/increase_button"
                android:gravity="center"
                android:hint="0"
                android:inputType="number" />

            <Button
                android:id="@+id/decrease_button"
                android:layout_width="29dp"
                android:layout_height="30dp"
                android:layout_centerVertical="true"
                android:layout_toEndOf="@+id/plant_quantity_edit_text"
                android:background="@null"
                android:drawableLeft="@drawable/ic_remove_circle_purple_24dp"
                android:paddingLeft="3dp" />
        </RelativeLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            style="@style/CategoryStyle"
            android:layout_width="55dp"
            android:layout_height="wrap_content"
            android:text="@string/plant_supplier_name"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="14sp" />

        <Spinner
            android:id="@+id/plant_supplier_name_spinner"
            style="@style/CategoryStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingRight="24dp"
            android:spinnerMode="dropdown"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="12sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            style="@style/CategoryStyle"
            android:layout_width="26dp"
            android:layout_height="wrap_content"
            android:text="@string/plant_supplier_contact"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="14sp" />

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2">

            <EditText
                android:id="@+id/plant_supplier_contact_edit_text"
                style="@style/EditorFieldStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/plant_supplier_contact"
                android:inputType="number"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="12sp" />
        </RelativeLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="horizontal"
        android:paddingTop="40dp">

        <Button
            android:id="@+id/call_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary"
            android:focusable="false"
            android:text="Order" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="horizontal"
        android:paddingTop="10dp">

        <Button
            android:id="@+id/delete_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/delete"
            android:focusable="false"
            android:text="Delete" />
    </LinearLayout>

</LinearLayout>